Add top bar that shows when scrolling down

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <title>Output Management</title>
   </head>
   <body>
-  <script type="text/javascript" src="app.bundle.js"></script><script type="text/javascript" src="landingPage.bundle.js"></script></body>
+  <script type="text/javascript" src="app.bundle.js"></script><script type="text/javascript" src="landingPage.bundle.js"></script><script type="text/javascript" src="mainContent.bundle.js"></script><script type="text/javascript" src="navBar.bundle.js"></script></body>
 </html>
