--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Output Management</title>
+    <title>Michael Osborne</title>
   </head>
   <body>
-  <script type="text/javascript" src="app.bundle.js"></script><script type="text/javascript" src="landingPage.bundle.js"></script><script type="text/javascript" src="mainContent.bundle.js"></script><script type="text/javascript" src="navBar.bundle.js"></script></body>
+  <script type="text/javascript" src="vendors~app.bundle.js"></script><script type="text/javascript" src="app.bundle.js"></script></body>
 </html>
